--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>This is a H1 heading</h1>
+
+    <!-- Same sentence is repeated to check how speech is affected by different tags-->
     <p>
         The quick brown fox jumps over the lazy dog
     </p>
@@ -15,5 +17,5 @@
     <p>
         The quick brown fox jumps over the lazy dog
     </p>
-</body> 
+</body>     
 </html>
