Added ordered list with custom start and another list in reverse order

--- a/html-boilerplate/doc_lists.html
+++ b/html-boilerplate/doc_lists.html
@@ -16,7 +16,22 @@
                 <li>Shop for food items</li>
                 <li>Lorem Ipsum</li>
             </ol>
-            
+            <h2>Ordered List starting from specified number</h2>
+            <ol start = 5>
+                <li>number 5</li>
+                <li>number 6</li>
+                <li>number 7 <strong><em>....something</em></strong></li>
+            </ol>
+
+            <!-- This list is meant to be sarcastic-->
+            <h2>Top 5 code editors</h2>
+            <ol reversed>
+                <li>Vim</li>
+                <li>Emacs</li>
+                <li>VSCode</li>
+                <li>Notepad</li>
+                <li>MS Paint</li>
+            </ol>
         </body>
     </head>
 </html>
