Fixed 'head' tag that was closed after body

--- a/html-boilerplate/doc_lists.html
+++ b/html-boilerplate/doc_lists.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
         <title>HTML Lists</title>
+    </head>
         <body>
             <h1>HTML Lists</h1>
             <h2>Unordered Shopping List of Favourite Food items</h2>
@@ -33,5 +35,4 @@
                 <li>MS Paint</li>
             </ol>
         </body>
-    </head>
 </html>
