Addded a relative link

--- a/html-boilerplate/LinksAndImages_1.html
+++ b/html-boilerplate/LinksAndImages_1.html
@@ -4,6 +4,12 @@
     <title>A page to learn about Links and Images</title>
     <body>
         <h1>There are <em>links</em> under this heading</strong></h1>
-        <a href="http://www.google.com"><strong>Google</strong></a>
+        <p>
+            <a href="http://www.google.com"><strong>Google</strong></a>
+        </p>
+        <p>
+            <a href=".\doc_lists.html">doc_lists page</a>
+        </p>
+        
     </body>
 </html>
