--- a/html-boilerplate/LinksAndImages_1.html
+++ b/html-boilerplate/LinksAndImages_1.html
@@ -10,6 +10,9 @@
         <p>
             <a href=".\doc_lists.html">doc_lists page</a>
         </p>
-        
+        <h1>There are <em>images</em> under this heading</h1>
+        <p>
+            <img src="./Images/KittyInJean.jpeg">
+        </p>
     </body>
 </html>
