Added an alternate text to kitty image

--- a/html-boilerplate/LinksAndImages_1.html
+++ b/html-boilerplate/LinksAndImages_1.html
@@ -12,7 +12,7 @@
         </p>
         <h1>There are <em>images</em> under this heading</h1>
         <p>
-            <img src="./Images/KittyInJean.jpeg">
+            <img src="./Images/KittyInJean.jpeg" alt="Kitty in a jean">
         </p>
     </body>
 </html>
