--- a/Project_Recipes/index.html
+++ b/Project_Recipes/index.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <p>
+            <a href="./recipes/Maggie.html">Maggie</a>
+        </p>
     </body>
 </html>
