--- a/Project_Recipes/recipes/Maggie.html
+++ b/Project_Recipes/recipes/Maggie.html
@@ -6,5 +6,16 @@
     </head>
     <body>
         <h1> Maggie </h1>
+        <p>
+            <img src="../images/maggie-ready.png" alt="Maggie Read to Eat">
+        </p>
+
+        <h2>Description</h2>
+        <p>
+            Maggie is brand-name of Nestle's noode popular in South Asia.
+        </p>
+        <p>
+            Maggie's tag-line <em>"Ready in 2 minutes"</em> is debatable, nevertheless, the recipe is easy to follow.
+        </p>
     </body>
 </html>
