--- a/Project_Recipes/recipes/Maggie.html
+++ b/Project_Recipes/recipes/Maggie.html
@@ -11,11 +11,33 @@
         </p>
 
         <h2>Description</h2>
-        <p>
-            Maggie is brand-name of Nestle's noode popular in South Asia.
-        </p>
-        <p>
-            Maggie's tag-line <em>"Ready in 2 minutes"</em> is debatable, nevertheless, the recipe is easy to follow.
-        </p>
+            <p>
+                Maggie is brand-name of Nestle's noode popular in South Asia.
+            </p>
+            <p>
+                Maggie's tag-line <em>"Ready in 2 minutes"</em> is debatable, nevertheless, the recipe is easy to follow.
+            </p>
+
+        <h2>Ingredients</h2>
+            <p>
+                <ul>
+                    <li>Maggie Packet(s)
+                        <ul>
+                            <li>Noodles</li>
+                            <li>Spice packet</li>
+                        </ul>
+                    </li>
+                    <li>Water</li>
+                    <li>Optional
+                        <ul>
+                            <li>Veggies</li>
+                            <li>Cooking Oil</li>
+                            <li>Spices</li>
+                            <li>Ketchup</li>
+                            <li>Schezwan Sauce</li>
+                        </ul>
+                    </li>
+                </ul>
+            </p>
     </body>
 </html>
