Added procedure for Maggie

--- a/Project_Recipes/recipes/Maggie.html
+++ b/Project_Recipes/recipes/Maggie.html
@@ -39,5 +39,21 @@
                     </li>
                 </ul>
             </p>
+        
+        <h2>Procedure</h2>
+            <p>
+                <ol>
+                    <li>Read the recommended water from the packet</li>
+                    <li>Pour the recommended water to a pan</li>
+                    <li>Place the pan on the stove and turn on the heat to medium</li>
+                    <li>Wait for water to heat up till bubbles are visible</li>
+                    <li>Add the Maggie spice and stir gently</li>
+                    <li>Add the noodles and stir gently</li>
+                    <li>Keep stirring gently for couple of seconds; pause for couple more seconds and repeat</li>
+                    <li>Cook on low heat till the water dries</li>
+                    <li>Turn of the heat when the water has almost evaporated</li>
+                    <li>Maggie is ready to serve</li>
+                </ol>
+            </p>
     </body>
 </html>
