Fixed the Tea Recipe - Procedure - Step 8 - improper closing of li tag

--- a/Project_Recipes/recipes/Tea.html
+++ b/Project_Recipes/recipes/Tea.html
@@ -20,8 +20,8 @@
                 <ul>
                     <li>Dried Tea leaves</li>
                     <li>Water</li>
-                    <li>Milk</li>
-                    <li>Optional
+                    <li>Milk </li>
+                    <li>Optional</li>
                         <ul>
                             <li>Sugar</li>
                             <li>Cloves</li>
@@ -40,7 +40,7 @@
                     <li>Add the dried tea leaves <em>(A teaspoon for a cup)</em></li>
                     <li>Add sugar as per taste</li>
                     <li>Wait for the water to start boiling</li>
-                    <li>Add half a cup of milk/li>
+                    <li>Add half a cup of milk</li>
                     <li>Wait for the tea to boil and turn off the heat</li>
                     <li>Tea is ready to serve</li>
                 </ol>
