Corrected encoding from UTC-8 to UTF-8

--- a/Project_Recipes/recipes/Tea.html
+++ b/Project_Recipes/recipes/Tea.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTC-8">
+        <meta charset="UTF-8">
         <Title>Tea</Title>
     </head>
     <body>
         <h1> Tea </h1>
         <p>
-            <img src="../images/Tea.png" alt="A cup of Tea">
+            <img src="../images/maggie-ready.png" alt="A cup of Tea">
         </p>
 
         <h2>Description</h2>
@@ -21,7 +21,7 @@
                     <li>Dried Tea leaves</li>
                     <li>Water</li>
                     <li>Milk </li>
-                    <li>Optional</li>
+                    <li>Optional
                         <ul>
                             <li>Sugar</li>
                             <li>Cloves</li>
