--- a/Project_Recipes/recipes/Tea.html
+++ b/Project_Recipes/recipes/Tea.html
@@ -7,7 +7,7 @@
     <body>
         <h1> Tea </h1>
         <p>
-            <img src="../images/maggie-ready.png" alt="A cup of Tea">
+            <img src="../images/Tea.png" alt="A cup of Tea">
         </p>
 
         <h2>Description</h2>
