Added link to tea on homepage

--- a/Project_Recipes/index.html
+++ b/Project_Recipes/index.html
@@ -9,5 +9,8 @@
         <p>
             <a href="./recipes/Maggie.html">Maggie</a>
         </p>
+        <p>
+            <a href="./recipes/Tea.html">Tea</a>
+        </p>
     </body>
 </html>
