--- a/Project_Recipes/index.html
+++ b/Project_Recipes/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet">
         <meta charset="UTC-8">
         <title>Homepage</title>
     </head>
