--- a/Project_Recipes/index.html
+++ b/Project_Recipes/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
         <meta charset="UTC-8">
         <title>Homepage</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <div class="header">Odin Recipes</div>
         <p>
             <a href="./recipes/Maggie.html">Maggie</a>
         </p>
